# ddog-http-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DataDogClient.cpp  DataDogEvent.cpp  DataDogMetric.cpp  DataDogMonitor.cpp  LICENSE  README.md  build.sh  client.cpp  conanfile.txt  event.cpp  main.cpp  metric.cpp  monitor.cpp
examples/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  DataDogClient.h  DataDogClient.hpp  DataDogEvent.hpp  DataDogMetric.h  DataDogMonitor.hpp  client.hpp  event.hpp  metric.hpp  monitor.hpp
include/ddog_http/: client.hpp  event.hpp  metric.hpp  monitor.hpp
src/: CMakeLists.txt  client.cpp  event.cpp  metric.cpp  monitor.cpp
test/: CMakeLists.txt
